--- a/portfolio.html
+++ b/portfolio.html
@@ -13,19 +13,19 @@
     </head>
     <body>
         <header class="header">       
-            <div class="container header-container">                    
-                <nav class="navigation" >
-                    <a href="index.html" class="nav-logo"><span class="nav-logo-span">Web</span>Studio</a>
-                    <ul class="nav-menu">
-                        <li class="nav-menu-item"><a href="index.html" class="nav-menu-item-link">Студия</a></li>
-                        <li class="nav-menu-item"><a href="portfolio.html" class="nav-menu-item-link selected">Портфолио</a></li>
-                        <li class="nav-menu-item"><a href="contacts.html"  class="nav-menu-item-link">Контакты</a></li>
+            <div class="container header--right">                    
+                <nav class="nav nav--center" >
+                    <a href="index.html" class="nav__logo"><span class="nav__logo__span">Web</span>Studio</a>
+                    <ul class="nav__menu">
+                        <li class="nav__item"><a href="index.html" class="nav__link">Студия</a></li>
+                        <li class="nav__item"><a href="portfolio.html" class="nav__link nav__link--selected">Портфолио</a></li>
+                        <li class="nav__item"><a href="contacts.html"  class="nav__link">Контакты</a></li>
                     </ul>                        
                 </nav>
-                <a href="mailto:info@devstudio.com" class="e-mail"><svg class="mail-icon"><use href="./images/icons.svg#icon-mail"></use></svg>info@devstudio.com</a>
-                <a href="tel:+380961111111" class="tel"><svg class="tel-icon"><use href="./images/icons.svg#icon-tel"></use></svg>+38 096 111 11 11</a>    
+                <a href="mailto:info@devstudio.com" class="mail"><svg class="mail__icon"><use href="./images/icons.svg#icon-mail"></use></svg>info@devstudio.com</a>
+                <a href="tel:+380961111111" class="tel"><svg class="tel__icon"><use href="./images/icons.svg#icon-tel"></use></svg>+38 096 111 11 11</a>    
             </div>
-        </header>             
+        </header>         
         <main>
             <section class="portfolio-filters section">
                 <div class="container">
@@ -182,56 +182,56 @@
             </section>            
         </main>
         <footer class="footer">
-            <div class="container footer-content">
-                <div class="footer-information">
-                    <a href="index.html" class="footer-logo"><span class="footer-logo-span">Web</span>Studio</a>
+            <div class="container footer__content">
+                <div class="footer__information">
+                    <a href="index.html" class="logo footer__logo"><span class="footer__logo__span">Web</span>Studio</a>
                     <address>
-                        <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
-                        <div class="footer-e-mail-div"><a href="mailto:info@devstudio.com" class="footer-e-mail">info@devstudio.com</a></div>
-                        <div><a href="tel:+380961111111" class="footer-tel">+38 096 111 11 11</a></div>
+                        <p class="footer__address">г. Киев, пр-т Леси Украинки, 26</p>
+                        <div class="footer__mail--div"><a href="mailto:info@devstudio.com" class="footer__mail">info@devstudio.com</a></div>
+                        <div><a href="tel:+380961111111" class="footer__tel">+38 096 111 11 11</a></div>
                     </address>
                 </div>
-                <div class="footer-social-links">
-                    <h3 class="footer-social-links-title">Присоединяйтесь</h3>
+                <div class="social-links">
+                    <h3 class="footer__social-links__title">Присоединяйтесь</h3>
                     <ul class="social-icons">
-                        <li class="social-icons-item">
-                            <a href="" class="social-icons-link footer-social-icons-link" target="_blank" rel="noopener noreferrer">
-                                <svg class="social-icon footer-social-icon">
+                        <li class="social-icons__item">
+                            <a href="" class="social-icons__link footer__social-icons__link" target="_blank" rel="noopener noreferrer">
+                                <svg class="social-icon footer__social-icon">
                                     <use href="./images/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="social-icons-item">
-                            <a href="" class="social-icons-link footer-social-icons-link">
-                                <svg class="social-icon footer-social-icon">
+                        <li class="social-icons__item">
+                            <a href="" class="social-icons__link footer__social-icons__link">
+                                <svg class="social-icon footer__social-icon">
                                     <use href="./images/icons.svg#icon-twitter" target="_blank" rel="noopener noreferrer"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="social-icons-item">
-                            <a href="" class="social-icons-link footer-social-icons-link">
-                                <svg class="social-icon footer-social-icon">
+                        <li class="social-icons__item">
+                            <a href="" class="social-icons__link footer__social-icons__link">
+                                <svg class="social-icon footer__social-icon">
                                     <use href="./images/icons.svg#icon-facebook" target="_blank" rel="noopener noreferrer"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="social-icons-item">
-                            <a href="" class="social-icons-link footer-social-icons-link">
-                                <svg class="social-icon footer-social-icon">
+                        <li class="social-icons__item">
+                            <a href="" class="social-icons__link footer__social-icons__link">
+                                <svg class="social-icon footer__social-icon">
                                     <use href="./images/icons.svg#icon-linkedin" target="_blank" rel="noopener noreferrer"></use>
                                 </svg>
                             </a>
                         </li>
                     </ul>
                 </div>
-                <div class="footer-subscribe">
-                    <form class="fotter-subscribe-form">
-                        <label for="user_subscribe_mail" class="footer-subscribe-title">Подпишитесь на рассылку</label>
-                        <div class="footer-subscribe-input-field">
-                            <input type="email" name="subscribe-mail" id="user_subscribe_mail" class="footer-subscribe-input" placeholder="E-mail" />
-                            <button type="submit" class="footer-subscribe-button">
+                <div class="subscribe">
+                    <form class="subscribe__form">
+                        <label for="user_subscribe_mail" class="subscribe__title">Подпишитесь на рассылку</label>
+                        <div class="subscribe__field">
+                            <input type="email" name="subscribe-mail" id="user_subscribe_mail" class="subscribe__mail" placeholder="E-mail" />
+                            <button type="submit" class="button subscribe__button">
                                 Подписаться
-                                <svg class="footer-subscribe-button-icon">
+                                <svg class="subscribe__button__icon">
                                     <use href="./images/icons.svg#icon-telegram" target="_blank" rel="noopener noreferrer"></use>
                                 </svg>
                             </button>
