--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width-device-width, initial-scale = 1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"/>
-        <link rel="stylesheet" href="./css/styles.css" />
+        <link rel="stylesheet" href="./sass/main.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
@@ -56,7 +56,7 @@
                                     <textarea name="feedback" rows="5" placeholder="Введите текст" id="user_feedback" class="input-field__textarea"></textarea>
                                 </div>
                             </div>
-                            <label class="form__confirmation">
+                            <label class="confirmation">
                                 <input type="checkbox" name="confirmation" value="true" id="user_confirmation" class="checkbox"/>                                
                                 <div class="checkbox__icon"></div>
                                 <p class="confirmation__title">
